[package]
name = "zigate"
version = "0.1.0"
authors = ["lucas-str <lucas.sturelle@yahoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
bytebuffer-rs = "0.3"
env_logger = "0.7"
hex = "0.4"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rppal = "0.11"
